--- a/WhatToEatToday/src/main/resources/templates/fragments/main/login.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/login.html
@@ -10,6 +10,7 @@
             type="text"
             th:field="*{id}"
             placeholder="ID"
+            autocomplete="off"
             required
           />
         </fieldset>
@@ -20,6 +21,7 @@
             type="password"
             th:field="*{password}"
             placeholder="PASSWORD"
+            autocomplete="off"
             required
           />
         </fieldset>
