--- a/WhatToEatToday/src/main/resources/static/css/main/members.css
+++ b/WhatToEatToday/src/main/resources/static/css/main/members.css
@@ -11,7 +11,7 @@
 
 .members .members__caption {
   border-radius: 15px 15px 0 0;
-  padding: 15px;
+  padding: 30px 0 15px;
   font-size: var(--font-medium);
   background-color: var(--color-carrot-orange);
 }
@@ -26,7 +26,8 @@
 }
 .members tr th {
   font-weight: bold;
-  border: 3px solid var(--color-carrot-orange);
+  border: 2px solid var(--color-carrot-orange);
+  border-bottom: 3px double var(--color-carrot-orange);
 }
 
 .members tr {
