--- a/WhatToEatToday/src/main/resources/templates/fragments/main/joinManager.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/joinManager.html
@@ -67,10 +67,16 @@
         <fieldset class="join__fieldset">
           <legend class="join__legend">주소</legend>
           <input
+            class="blind"
+            id="address-info"
+            type="text"
+            th:field="*{address}"
+          />
+          <input
             class="join__input"
             type="text"
             id="address"
-            th:field="*{address}"
+            onkeyup="addressEmptyCheck()"
             onclick="getAddress()"
             placeholder="Address"
             autocomplete="off"
