--- a/WhatToEatToday/src/main/resources/templates/fragments/script/members.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/script/members.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<th:block th:fragment="script">
-
-</th:block>
+  <th:block th:fragment="script">
+    <script th:inline="javascript">
+      var members = [[${members}]];
+      var membersBody = document.querySelector(".members_body");
+      var tr = membersBody.querySelectorAll("tr");
+      for( var i=0; i<members.length; i++) {
+          if(members[i].address !== null) {
+            var address = JSON.parse(members[i].address);
+            tr[i].querySelector("td:nth-child(8)").innerText = address.addresses[0].jibunAddress;
+            console.log(members[i].name, members[i].address);
+          }
+      }
+    </script>
+  </th:block>
+</html>
