--- a/WhatToEatToday/src/main/resources/templates/fragments/main/members.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/members.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
   <main class="main" th:fragment="main">
     <div class="inner">
+      <input type="radio" name="map_active_button" id="map_close_button" checked/>
       <table class="members">
         <caption class="members__caption">
           회원정보
@@ -40,29 +41,6 @@
             <td>주소</td>
           </tr>
         </tbody>
-        <tfoot>
-          <tr>
-            <td colspan="8">
-              <ul class="pagenation">
-                <li>
-                  <a href="">1</a>
-                </li>
-                <li>
-                  <a href="">2</a>
-                </li>
-                <li>
-                  <a href="">3</a>
-                </li>
-                <li>
-                  <a href="">4</a>
-                </li>
-                <li>
-                  <a href="">5</a>
-                </li>
-              </ul>
-            </td>
-          </tr>
-        </tfoot>
       </table>
     </div>
   </main>
