--- a/WhatToEatToday/src/main/resources/templates/fragments/script/members.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/script/members.html
@@ -1,15 +1,114 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
   <th:block th:fragment="script">
+    <script
+      type="text/javascript"
+      src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=wbeu0mozwg&submodules=panorama"
+    ></script>
     <script th:inline="javascript">
-      var members = [[${members}]];
-      var membersBody = document.querySelector(".members_body");
-      var tr = membersBody.querySelectorAll("tr");
-      for( var i=0; i<members.length; i++) {
+      const members = [[${members}]];
+
+      console.log(members)
+      const membersBody = document.querySelector(".members_body");
+      const tr = membersBody.querySelectorAll("tr");
+      for( let i=0; i<members.length; i++) {
           if(members[i].address !== null) {
-            var address = JSON.parse(members[i].address);
-            tr[i].querySelector("td:nth-child(8)").innerText = address.addresses[0].jibunAddress;
-            console.log(members[i].name, members[i].address);
+
+            const address = JSON.parse(members[i].address).addresses[0];
+            const addressTd = tr[i].querySelector("td:nth-child(8)");
+
+            addressTd.innerText = "";
+
+            const mapActiveButtonLabel = document.createElement("label");
+
+            mapActiveButtonLabel.setAttribute("for", "map_active_button" + i);
+
+            const addressSpan = document.createElement("span");
+
+            addressSpan.innerText = address.roadAddress;
+            mapActiveButtonLabel.appendChild(addressSpan);
+            addressTd.appendChild(mapActiveButtonLabel);
+
+            const mapActiveButton = document.createElement("input");
+
+            mapActiveButton.type = "radio" ;
+            mapActiveButton.name = "map_active_button";
+            mapActiveButton.className = "map_active_button";
+
+            mapActiveButton.id = "map_active_button" + i;
+
+            addressTd.appendChild( mapActiveButton);
+
+
+            const mapCloseButtonLabel = document.createElement("label");
+
+            mapCloseButtonLabel.setAttribute("for", "map_close_button");
+
+            const mapOuter = document.createElement("figure");
+
+            mapOuter.className = "map_outer";
+
+            const mapInner = document.createElement("div");
+
+            mapInner.className = "map_inner";
+
+            mapOuter.appendChild(mapInner);
+
+            const mapFigureCaption = document.createElement("figcaption");
+
+            mapFigureCaption.innerText = `${address.roadAddress} ${members[i].addressDetail}`;
+
+            mapOuter.appendChild(mapFigureCaption);
+
+            mapOuter.addEventListener("click", (e) => e.preventDefault());
+
+            mapCloseButtonLabel.appendChild(mapOuter);
+
+            addressTd.appendChild(mapCloseButtonLabel);
+
+            const HOME_PATH = "http://" + window.location.host || '.';
+
+            const Lat = Number(address.y)
+            const Lng = Number(address.x)
+            const map = new naver.maps.Map(mapInner, {
+              center: new naver.maps.LatLng(Lat, Lng),
+              zoom: 13,
+              minZoom: 6,
+              zoomControl: true,
+              zoomControlOptions: {
+                  position: naver.maps.Position.TOP_RIGHT
+              },
+              mapDataControl: false,
+              logoControlOptions: {
+                  position: naver.maps.Position.LEFT_BOTTOM
+              },
+              disableKineticPan: false
+            });
+            console.log(address)
+
+            const urlMarker = new naver.maps.Marker({
+                position: new naver.maps.LatLng(Lat, Lng),
+                map: map,
+                title: 'urlMarker',
+                icon: HOME_PATH +"/img/map/pin_default.png",
+                animation: naver.maps.Animation.DROP
+            });
+
+            naver.maps.Event.addListener(urlMarker, 'click', function() {
+                if (urlMarker.getAnimation() !== null) {
+                    urlMarker.setAnimation(null);
+                } else {
+                    urlMarker.setAnimation(naver.maps.Animation.BOUNCE);
+                }
+            });
+
+            naver.maps.Event.addListener(urlMarker, 'click', function() {
+                if (urlMarker.getAnimation() !== null) {
+                    urlMarker.setAnimation(null);
+                } else {
+                    urlMarker.setAnimation(naver.maps.Animation.BOUNCE);
+                }
+            });
           }
       }
     </script>
