--- a/WhatToEatToday/src/main/resources/static/css/main/members.css
+++ b/WhatToEatToday/src/main/resources/static/css/main/members.css
@@ -1,63 +1,121 @@
 .main .inner {
   padding: 30px 0;
+  max-width: 1600px;
+}
+
+input[name="map_active_button"] {
+  display: none;
 }
 
 .members {
   width: 100%;
   border-collapse: collapse;
-  border: 3px solid var(--color-carrot-orange);
-  border-radius: 15px;
+  border: 2px solid var(--color-yue-guang-lan-blue);
 }
 
 .members .members__caption {
-  border-radius: 15px 15px 0 0;
-  padding: 30px 0 15px;
+  border-radius: 5px 5px 0 0;
+  padding: 15px 0 10px;
   font-size: var(--font-medium);
-  background-color: var(--color-carrot-orange);
+  background-color: var(--color-yue-guang-lan-blue);
 }
 
 .members tr th,
 .members tr td {
+  padding: 5px 0;
   color: black;
   vertical-align: middle;
-  border: 2px dotted var(--color-carrot-orange);
-  border-bottom: 2px solid var(--color-carrot-orange);
+  border: 2px dotted var(--color-yue-guang-lan-blue);
+  border-bottom: 2px solid var(--color-yue-guang-lan-blue);
   background-color: aliceblue;
 }
+
 .members tr th {
-  font-weight: bold;
-  border: 2px solid var(--color-carrot-orange);
-  border-bottom: 3px double var(--color-carrot-orange);
+  border: 2px solid var(--color-yue-guang-lan-blue);
+  font-size: var(--font-regular);
+  font-family: "NotoSansKR-Bold";
+  border-bottom: 3px double var(--color-yue-guang-lan-blue);
 }
 
-.members tr {
-  height: 30px;
-}
 .members tr td {
+  font-size: var(--font-regular);
+  font-family: "NotoSansKR-Regular";
   text-align: center;
 }
 
-.members tbody tr td:nth-child(1) {
-  padding-left: 40px;
+.members tbody tr td {
+  padding-left: 20px;
+  padding-right: 5px;
   text-align: left;
 }
 
-.pagenation {
-  padding: 15px 0 5px;
+.members tbody tr td:nth-child(8) label[for*="map_active_button"] {
+  cursor: pointer;
+  color: var(--color-aurora-green);
+  text-decoration: underline;
+}
+
+.members tbody tr td:nth-child(8) label[for*="map_active_button"]:hover {
+  color: var(--color-reef-encounter);
+}
+
+.members tbody tr td:nth-child(8) label[for="map_close_button"] {
+  position: fixed;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: none;
+  z-index: 1;
+  cursor: pointer;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.members tbody tr td:nth-child(8) label[for="map_close_button"] .map_outer {
+  margin-top: 100px;
+  padding: 30px;
+  background-color: var(--color-iceland-poppy);
   display: inline-block;
+  border-radius: 15px;
 }
-.pagenation::after {
-  content: "";
+
+.members tbody tr td:nth-child(8) label[for="map_close_button"] .map_inner {
+  width: 1024px;
+  height: 600px;
+  overflow: hidden;
+  border-radius: 10px;
+  z-index: 2;
+}
+
+.members
+  tbody
+  tr
+  td:nth-child(8)
+  label[for="map_close_button"]
+  .map_outer
+  figcaption {
+  margin-top: 30px;
+  color: whitesmoke;
+}
+
+.members
+  tbody
+  tr
+  td:nth-child(8)
+  label[for="map_close_button"]
+  .map_outer
+  figcaption {
+  font-size: var(--font-medium);
+  text-align: center;
+}
+
+.members
+  tbody
+  tr
+  td:nth-child(8)
+  input[name="map_active_button"]:checked
+  + label[for="map_close_button"] {
   display: block;
-  width: 100%;
-  clear: both;
-}
-
-.pagenation li {
-  float: left;
-  font-weight: bold;
-}
-
-.pagenation li:nth-child(n + 2) {
-  margin-left: 10px;
 }
