--- a/WhatToEatToday/src/main/resources/static/css/global.css
+++ b/WhatToEatToday/src/main/resources/static/css/global.css
@@ -117,7 +117,7 @@ label {
 
 .main {
   min-height: 100vh;
-  padding: 15vh 0;
+  padding: 8vh 0;
   background-color: var(--color-flat-flesh);
 }
 
@@ -129,4 +129,36 @@ label {
   text-align: center;
   color: saddlebrown;
   font-size: var(--font-large);
+}
+
+.loading {
+  position: fixed;
+  margin: auto;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  background-color: #fad39064;
+  backdrop-filter: blur(10px);
+  color: saddlebrown;
+  font-size: 34px;
+}
+.loading figure {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.loading figure img {
+  object-fit: fill;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 400px;
 }
