--- a/WhatToEatToday/src/main/resources/templates/fragments/head.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/head.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrinkto-fit=no">
     <!-- Custom styles for this template -->
+    <link rel="icon" type="image/png" sizes="96x96" href="/img/favicon/favicon-96x96.png">
     <link href="/css/reset.css" rel="stylesheet" />
     <link href="/css/global.css" rel="stylesheet" />
     <link href="/css/header.css" rel="stylesheet" />
