--- a/WhatToEatToday/src/main/resources/templates/fragments/main/home.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/home.html
@@ -28,7 +28,7 @@
 				</fieldset>
 				<fieldset class="menu" th:case="Manager">
 					<button class="menu__button" type="button"
-						onclick=" location.href='/menu/recommend' ">
+						onclick=" location.href='/eatinghouse/store' ">
 						<figure>
 							<i class="fa-solid fa-shop menu__button__icon"></i>
 							<figcaption class="menu__button__text">가게 등록</figcaption>
