--- a/WhatToEatToday/src/main/resources/templates/fragments/main/home.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/home.html
@@ -35,7 +35,7 @@
 						</figure>
 					</button>
 					<button class="menu__button" type="button"
-						onclick=" location.href='/menu/all' ">
+						onclick=" location.href='/eatinghouse/item' ">
 						<figure>
 							<i class="fa-solid fa-book-open menu__button__icon"></i>
 							<figcaption class="menu__button__text">메뉴 등록</figcaption>
