--- a/WhatToEatToday/src/main/resources/templates/layout.html
+++ b/WhatToEatToday/src/main/resources/templates/layout.html
@@ -2,10 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
   <head th:replace="fragments/head :: head"> </head>
   <body>
-
-    <header th:replace="fragments/header :: header" />
-    <main th:replace="( 'fragments/main/' + ${page} ) :: main" />
-    <footer th:replace="fragments/footer :: footer" />
+    <header th:replace="fragments/header :: header" > </header>
+    <main th:replace="( 'fragments/main/' + ${page} ) :: main" ></main>/
+    <footer th:replace="fragments/footer :: footer" ></footer>
 
     <div class="loading">
       <figure>
