--- a/WhatToEatToday/src/main/resources/templates/fragments/header.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/header.html
@@ -22,7 +22,7 @@
                         <a href="/admin/members" >회원관리</a>
                     </li>
                     <li th:case="Manager">
-                        <a href="/manager" >매장관리</a>
+                        <a href="/manager/store" >매장관리</a>
                     </li>
                     <li th:case="Customer">
                         <a href="/customer" >마이페이지</a>
