--- a/WhatToEatToday/src/main/resources/templates/fragments/script/joinManager.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/script/joinManager.html
@@ -6,7 +6,7 @@
     ></script>
     <script
       type="text/javascript"
-      src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=wbeu0mozwg&submodules=geocoder"
+      src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=8uij0746cx&submodules=geocoder"
     ></script>
     <script>
       function getAddress() {
