--- a/WhatToEatToday/src/main/resources/templates/fragments/main/updateEatingHouseItem.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/updateEatingHouseItem.html
@@ -2,12 +2,18 @@
 <html xmlns:th="http://www.thymeleaf.org">
   <main class="main" th:fragment="main">
     <div class="inner">
-      <h2>메뉴 등록</h2>
+      <h2>메뉴 수정</h2>
       <form
+        action="/eatinghouse/item/{itemId}/edit"
         method="post"
-        th:object="${joinStoreItem}"
+        th:object="${form}"
         class="join"
       >
+		
+		<input 
+			type="hidden"
+			th:field="*{id}"/>      
+      
                
         <fieldset class="join__fieldset">
           <legend class="join__legend">음식이름</legend>
@@ -32,7 +38,7 @@
           />
         </fieldset>
       
-        <button class="join__button">메뉴등록</button>
+        <button class="join__button">메뉴수정</button>
       </form>
     </div>
   </main>
