--- a/WhatToEatToday/src/main/resources/templates/fragments/main/home.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/home.html
@@ -44,14 +44,14 @@
 				</fieldset>
 				<fieldset class="menu" th:case="Customer">
 					<button class="menu__button" type="button"
-						onclick=" location.href='/menu/recommend' ">
+						onclick=" location.href='/customer/recommend' ">
 						<figure>
 							<i class="fa-solid fa-thumbs-up menu__button__icon"></i>
 							<figcaption class="menu__button__text">메뉴 추천 받기</figcaption>
 						</figure>
 					</button>
 					<button class="menu__button" type="button"
-						onclick=" location.href='/menu/all' ">
+						onclick=" location.href='/customer/menuAll' ">
 						<figure>
 							<i class="fa-solid fa-utensils menu__button__icon"></i>
 							<figcaption class="menu__button__text">메뉴 전체 보기</figcaption>
