--- a/WhatToEatToday/src/main/resources/templates/layout.html
+++ b/WhatToEatToday/src/main/resources/templates/layout.html
@@ -3,7 +3,7 @@
   <head th:replace="fragments/head :: head"> </head>
   <body>
     <header th:replace="fragments/header :: header" > </header>
-    <main th:replace="( 'fragments/main/' + ${page} ) :: main" ></main>/
+    <main th:replace="( 'fragments/main/' + ${page} ) :: main" ></main>
     <footer th:replace="fragments/footer :: footer" ></footer>
 	
     <div class="loading">
