--- a/WhatToEatToday/src/main/resources/templates/fragments/header.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/header.html
@@ -25,7 +25,7 @@
                         <a href="/manager/store" >매장관리</a>
                     </li>
                     <li th:case="Customer">
-                        <a href="/customer" >마이페이지</a>
+                        <a href="/customer/myPage" >마이페이지</a>
                     </li>
                 </th:block>
                 <li>
