Revert "메뉴 update 기능"

--- a/WhatToEatToday/src/main/resources/templates/fragments/main/joinEatingHouseItem.html
+++ b/WhatToEatToday/src/main/resources/templates/fragments/main/joinEatingHouseItem.html
@@ -4,6 +4,7 @@
     <div class="inner">
       <h2>메뉴 등록</h2>
       <form
+        action="/eatinghouse/item"
         method="post"
         th:object="${joinStoreItem}"
         class="join"
